--- a/importing_data_with_readr.Rmd
+++ b/importing_data_with_readr.Rmd
@@ -38,11 +38,55 @@ library('RPostgreSQL') # used for PostgreSQL (with DBl)
 
 
 ### Reading Data
-local paths
-setwd()
-getwd()
-local data types
-online paths
+
+The readr and readxl libraries gives us a variety of functions that turn flat files into data frames. These are the functions that I find most useful. 
+
+```{r, eval=FALSE}
+read_file()     # catch all, useful for .txt files
+read_csv()      # comma seperative files
+read_tsv()      # tab seperated files
+read_xls()      # excel files (from readxl)
+```
+
+These readr functions can be used on a variety of paths, some you might not have otherwise known about. 
+
+```{r, eval=FALSE}
+# example paths 
+read_csv("mtcars.csv")
+read_csv("mtcars.csv.zip")
+read_csv("~/local/path/to/my/file/mtcars.csv")
+read_csv("https://github.com/tidyverse/readr/raw/master/inst/extdata/mtcars.csv")
+read_csv("a,b,c
+         1,2,3
+         4,5,6")
+```
+
+In the first example, readr is simply reading in a .csv file found in the current working directory. You can find your current working directory using the base R *getwd( )* function. This is the most basic example of readr's capabiities. 
+
+In the second example line of code, readr is reading in a file that has a .zip extension. readr can unpack compressed files with .zip, .bz2 extensions and similiar.
+
+The third line of code is an example of readr following a local path to a folder in which R isn't currently working in. The initial tilde tells R to start at your predescribed home directory and then follow the file path, sometimes the tilde isn't necssiary if you've already set your R working directory using the *setwd( )* function.
+
+The fourth example is readr following an online path to a described dataset. Go ahead and follow the path and have a look at where it's pointing. 
+
+https://github.com/tidyverse/readr/raw/master/inst/extdata/mtcars.csv
+
+Finally, the last line in the example code above shows how you can create an in-line csv file and read it in directly. This can be useful for creating reproducable examples, such as when you need a question answered on Stack Overflow. 
+
+
+All of these readr functions can be expanded to include arguements that make your imported data more suitable to analysis. These are the arguements I use the most with readr, but there are many more. Check out ?read_csv in the R terminal for a full description of possible arguements. 
+
+```{r, eval=FALSE}
+read_csv("file_name.csv",            # file path and name always comes first
+         delim=",",                  # single character field seperator
+         quote = "\"",               # single character to quote strings
+         comment = "#",              # single character to signal comments
+         col_names = c("add", "names", "or", "T/F"), # custom name columns on import
+         na = ".",                   # string to signify missing values
+         skip = 0,                   # number of lines to skip before reading data
+         progress = show_progress()  # display a progress bar
+         )
+```
 
 ### Parsing Data
 columns
@@ -52,3 +96,5 @@ all that nonsense
 ### Writing Data 
 goes to outputs
 scripts save in scripts
+
+
