--- a/importing_data_with_readr.Rmd
+++ b/importing_data_with_readr.Rmd
@@ -35,7 +35,7 @@ library('RSQLite')     # used for SQLLite backend (with DBl)
 library('RPostgreSQL') # used for PostgreSQL (with DBl)
 ```
 
-
+<br  />
 
 ### Reading Data
 
@@ -88,13 +88,135 @@ read_csv("file_name.csv",            # file path and name always comes first
          )
 ```
 
+<br  />
+
 ### Parsing Data
-columns
-date-times
-all that nonsense
+
+Rarely do you read in files that have clean, correctly structured values. The readr library has a family of parsing functions built to analyze a character string into logical syntactic components. In other words, the parsing family of functions will clean up your data's typing and transform the values into their correct data type. That's the idea anyway. 
+
+Most often I'll use parsing to clean up numbers in a dataset, numeric entries can be surrounded by unwanted characters, such as $100 or 60%. There's also the issue of grouping characters, i.e. 1,000,000 is written instead of 10000000. Finally, you may be working with foreign data that uses the comma as a decimal point instead of the period. Let's go through how to correct these common issues using parsing. 
+
+<br  /> 
+
+##### Numbers - Unwanted Characters
+```{r}
+a <- "The price is $1993"
+str(a)
+
+a <- parse_number(a)
+str(a)
+```
+
+<br  />
+
+
+
+##### Numbers - Decimal Point Problems
+```{r}
+a <- "1,99"
+str(a)
+
+a <- parse_double(a, locale = locale(decimal_mark = ","))
+str(a)
+```
+
+<br  />
+
+
+##### Numbers - Grouping Markers
+```{r}
+a <- "$100.000.000"
+str(a)
+
+a <- parse_number(a, locale = locale(grouping_mark = "."))
+str(a)
+```
+
+<br  />
+
+Dates and times can be confusing since there are so many ways to write them. ISO8601 is an international date-time standard in which the components are ordered largest to smallest - year, month, day and optionally a T followed by hour, minute, second. If no time is specified, the parsing function sets the time to midnight. 
+
+<br  />
+
+#### Date - Times
+```{r}
+a <- "20180228"
+parse_datetime(a)
+
+b <- "2018-02-28T20:10:59"
+parse_datetime(b)
+```
+
+<br  />
+
+Parsing only dates or only times is also straight forward. The dates function expects a four digit year and a - or / followed by the month with a - or / and the day. The times function expects the hour followed by a colon, :, followed by the minute and another colon, then the second. 
+
+<br  />
+
+#### Dates or Times
+```{r}
+a <- "2018/02/28"
+parse_date(a)
+
+b <- "11:11:11"
+parse_time(b)
+```
+
+<br  /> 
+
+Say you've got a date-time to parse that isn't in the ISO8601 format, perhaps the months are spelled out, or the data isn't in 24 hour format. Here in the US we often write a date as month-day-year; *parse_datetime( )* won't like that one bit. For these common situations, you can create your own date-time format using these building blocks.
+
+<br  />
+
+##### Year <br  />
+%Y - 4 digit year number <br  />
+%y - last 2 digit year number; 00-69 = 2000 - 2069, 70-99 = 1970 - 1999 <br  />
+
+##### Month <br  />
+%m - 2 digit month number <br  />
+%b - abbreviated month name, e.g. "Jan" <br  />
+%B - full month name, e.g. "January" <br  />
+
+##### Day <br  />
+%d - 2 digit day number <br  />
+%e - option leading space <br  />
+
+##### Time  <br  />
+%H - 0 to 23 hour <br  />
+%I - 0 to 12 hour, must be used with %p <br  />
+%p - AM / PM indicator <br  />
+%M - minutes  <br  />
+%S - integer seconds <br  />
+%OS - real seconds <br  />
+%Z - time zone, e.g. America/Chicago <br  />
+%z - time zone, offset from UTC, e.g. +0800 <br  />
+
+##### Other <br  />
+%. - skips one non-digit character <br  />
+%* - skips any number of non-digits <br  />
+
+<br  />
+
+#### Custom Date-Times
+```{r}
+a <- "Jan 7 2018"
+parse_date(a, "%b %d %Y")
+
+b <- "12:45 am"
+parse_time(b, "%I:%M %p")
+```
+
+<br  />
+
+
+
+
 
 ### Writing Data 
-goes to outputs
-scripts save in scripts
 
+#### write_csv()
+
+#### write_excel_csv()
+
+#### ggsave()
 
