--- a/importing_data_with_readr.Rmd
+++ b/importing_data_with_readr.Rmd
@@ -4,17 +4,15 @@ author: "Fisher Ankney"
 date: "February 13, 2018"
 output: html_document
 ---
-This is the second of a six part series summarsing the core concepts of Hadley Wickham's R for Data Science: <http://r4ds.had.co.nz/>. In the previous post, I've written about the R4DS chapters covering data visualization using ggplot2, you can find that post [here](site.baseurl/).
+This is the second of a six-part series summarizing the core concepts of Hadley Wickham's textbook, R for Data Science <http://r4ds.had.co.nz/>. In the previous [post](link) I've abridged the book’s chapters that cover data visualization with ggplot2.
 
-in this post, I'll summarize importing and exporting data with the readr library. While importing data may sound trivial, it can become a hassle when you're faced with parsing date-times, unusual file-types, non-typical encodings, or foreign language syntax. 
+In this post, I’ll be focusing on readr, a core component of the Hadley’s tidyverse packages. Importing, parsing, and exporting data may sound trivial, but it is an integral part of the data science workflow; developing good data handling habits is a worthy goal. Properly utilizing readr can increase an analysis’ reproducibility and decreasing data structuring errors, all while saving you precious time.  
 
-For more useful resources on importing data, check out these links:
+For more useful resources on readr and other data importing methods, check out these links:
 
--
--
--
--
-
+- readr package documentation https://cran.r-project.org/web/packages/readr/readr.pdf
+- readr Github repository - https://github.com/tidyverse/readr
+- Non-readr import methods https://www.r-bloggers.com/this-r-data-import-tutorial-is-everything-you-need/
 
 <br  />
 
@@ -22,10 +20,10 @@ For more useful resources on importing data, check out these links:
 ```{r, message=FALSE}
 library('tidyverse') # used for many amazing things, includes readr library
 library('readr')     # used to read in a variety of file types
-library('readxl')    # used for reading in microsoft excel files
+library('readxl')    # used for reading in Microsoft excel files
 ```
 
-You may also be interested in the following libraries, however I won't cover them in this blog post - 
+You may also be interested in the following libraries; however I won't cover them in this blog post - 
 
 ```{r, eval=FALSE}
 library('haven')       # used for SPSS, SAS, and Strata input files
@@ -39,7 +37,7 @@ library('RPostgreSQL') # used for PostgreSQL (with DBl)
 
 ### Reading Data
 
-The readr and readxl libraries gives us a variety of functions that turn flat files into data frames. These are the functions that I find most useful. 
+The readr and readxl libraries gives a variety of functions that turn flat files into data frames. These are the functions that I most often find useful. 
 
 ```{r, eval=FALSE}
 read_file()     # catch all, useful for .txt files
@@ -48,7 +46,7 @@ read_tsv()      # tab seperated files
 read_xls()      # excel files (from readxl)
 ```
 
-These readr functions can be used on a variety of paths, some you might not have otherwise known about. 
+readr functions can be used on a variety of paths, some of these you might not have otherwise known about. 
 
 ```{r, eval=FALSE}
 # example paths 
@@ -56,29 +54,18 @@ read_csv("mtcars.csv")
 read_csv("mtcars.csv.zip")
 read_csv("~/local/path/to/my/file/mtcars.csv")
 read_csv("https://github.com/tidyverse/readr/raw/master/inst/extdata/mtcars.csv")
-read_csv("a,b,c
-         1,2,3
-         4,5,6")
 ```
 
-In the first example, readr is simply reading in a .csv file found in the current working directory. You can find your current working directory using the base R *getwd( )* function. This is the most basic example of readr's capabiities. 
-
-In the second example line of code, readr is reading in a file that has a .zip extension. readr can unpack compressed files with .zip, .bz2 extensions and similiar.
-
-The third line of code is an example of readr following a local path to a folder in which R isn't currently working in. The initial tilde tells R to start at your predescribed home directory and then follow the file path, sometimes the tilde isn't necssiary if you've already set your R working directory using the *setwd( )* function.
-
-The fourth example is readr following an online path to a described dataset. Go ahead and follow the path and have a look at where it's pointing. 
+In the first line of the above example code, readr simply processes a .csv file found in the current working directory. You can find your current working directory using the base R *getwd( )* function. Next, exhibits a file that has a .zip extension. readr can unpack compressed files with .zip, .bz2, and other similar extensions. The third line is an example of readr following a local path to a folder in which R isn't currently working in. Set your current working directory in RStudio using the setwd( ) function or the navigation within the files panel. The fourth and final example is following an online path to a described dataset. Go ahead and follow the path and have a look at where it's pointing if you wish. 
 
 https://github.com/tidyverse/readr/raw/master/inst/extdata/mtcars.csv
 
-Finally, the last line in the example code above shows how you can create an in-line csv file and read it in directly. This can be useful for creating reproducable examples, such as when you need a question answered on Stack Overflow. 
 
-
-All of these readr functions can be expanded to include arguements that make your imported data more suitable to analysis. These are the arguements I use the most with readr, but there are many more. Check out ?read_csv in the R terminal for a full description of possible arguements. 
+readr functions can be expanded to include arguments that make your imported data more suitable for analysis. Here are the arguments I use the most commonly. Type ?read_csv to the R console for a full description of possible arguments. 
 
 ```{r, eval=FALSE}
 read_csv("file_name.csv",            # file path and name always comes first
-         delim=",",                  # single character field seperator
+         delim=",",                  # single character field separator
          quote = "\"",               # single character to quote strings
          comment = "#",              # single character to signal comments
          col_names = c("add", "names", "or", "T/F"), # custom name columns on import
@@ -90,15 +77,15 @@ read_csv("file_name.csv",            # file path and name always comes first
 
 <br  />
 
-### Parsing Data
+### Data Parsing
 
-Rarely do you read in files that have clean, correctly structured values. The readr library has a family of parsing functions built to analyze a character string into logical syntactic components. In other words, the parsing family of functions will clean up your data's typing and transform the values into their correct data type. That's the idea anyway. 
+Rarely can you read in files that have correctly structured data. The readr library has a family of parsing functions built in to turn character string into your desired data structure. Parsing can be used to format data into any structure, but I most often use it to clean up number and date-time values. 
 
-Most often I'll use parsing to clean up numbers in a dataset, numeric entries can be surrounded by unwanted characters, such as $100 or 60%. There's also the issue of grouping characters, i.e. 1,000,000 is written instead of 10000000. Finally, you may be working with foreign data that uses the comma as a decimal point instead of the period. Let's go through how to correct these common issues using parsing. 
+Numeric entries can be surrounded by unwanted characters, such as “$100” or “60%”. There's also the issue of grouping characters, e.g. 1,000,000 instead of 10000000. Finally, you may work with foreign data sources that use the comma as a decimal point instead of the period, e.g. 1,00 instead of 1.00. Let's go through how to correct these common issues using simple parsing. 
 
 <br  /> 
 
-##### Numbers - Unwanted Characters
+##### Unwanted Characters
 ```{r}
 a <- "The price is $1993"
 str(a)
@@ -111,7 +98,7 @@ str(a)
 
 
 
-##### Numbers - Decimal Point Problems
+##### Decimal Points
 ```{r}
 a <- "1,99"
 str(a)
@@ -123,7 +110,7 @@ str(a)
 <br  />
 
 
-##### Numbers - Grouping Markers
+##### Group Markers
 ```{r}
 a <- "$100.000.000"
 str(a)
@@ -134,11 +121,11 @@ str(a)
 
 <br  />
 
-Dates and times can be confusing since there are so many ways to write them. ISO8601 is an international date-time standard in which the components are ordered largest to smallest - year, month, day and optionally a T followed by hour, minute, second. If no time is specified, the parsing function sets the time to midnight. 
+Dates and times can become confusing since there are so many ways to write them. ISO8601 is an international date-time standard in which the components are ordered largest to smallest - year, month, day and optionally a T followed by hour, minute, second. If no time is specified, the parsing function sets the time to midnight. Here’s an example of parsing out ISO8601 date-time. 
 
 <br  />
 
-#### Date - Times
+#### ISO8601 Date - Time
 ```{r}
 a <- "20180228"
 parse_datetime(a)
@@ -149,7 +136,7 @@ parse_datetime(b)
 
 <br  />
 
-Parsing only dates or only times is also straight forward. The dates function expects a four digit year and a - or / followed by the month with a - or / and the day. The times function expects the hour followed by a colon, :, followed by the minute and another colon, then the second. 
+Parsing only dates or only times is even more straight forward. The dates function expects a four digit year with a “-“ or “/” followed by the month with a “-“ or “/” followed by the day. The times function expects the hour value followed by a  “:” followed by the minutes value with another “:” and finally then the seconds value. 
 
 <br  />
 
@@ -164,7 +151,7 @@ parse_time(b)
 
 <br  /> 
 
-Say you've got a date-time to parse that isn't in the ISO8601 format, perhaps the months are spelled out, or the data isn't in 24 hour format. Here in the US we often write a date as month-day-year; *parse_datetime( )* won't like that one bit. For these common situations, you can create your own date-time format using these building blocks.
+Say you've got a date-time to parse that isn't in the ISO8601 format, perhaps the months are spelled out properly or there’s an AM/PM indicator. For these and similar situations you can create your own date-time parsers using these building blocks indicators. 
 
 <br  />
 
@@ -197,7 +184,7 @@ Say you've got a date-time to parse that isn't in the ISO8601 format, perhaps th
 
 <br  />
 
-#### Custom Date-Times
+#### Custom Date - Times
 ```{r}
 a <- "Jan 7 2018"
 parse_date(a, "%b %d %Y")
@@ -208,15 +195,49 @@ parse_time(b, "%I:%M %p")
 
 <br  />
 
-
-
-
-
 ### Writing Data 
 
-#### write_csv()
+When your analysis is complete and you’re ready to save the altered .csv files or newly created figures, readr can come back into action. It’s important to explicitly save files from within the R script to properly keep track of figures data sources and increase an analysis’ reproducibility. You never want to answer the question, “where did this plot come from?” with “I don’t know”. readr can help with that. 
 
-#### write_excel_csv()
+<br  />
 
-#### ggsave()
+#### Writing .csv Files
+
+```{r, eval=FALSE}
+write_csv(
+  dataframe,                    #
+  "path/to/file/filename.csv",  #
+  delim = " ",                  #
+  na = "NA",                    #
+  append = FALSE                # 
+)
+```
+
+A straight forward function, *write_csv( )* saves your defined data as a .csv file to the destination and name you specify as the second argument. write_csv( ) allows you to specify 
+delimiters, missing values and more. Type ?write_csv into the R console for more arguments. 
+ 
+<br  />
+
+#### Writing Image Files
+
+```{r, eval=FALSE}
+library(‘ggplot2’)
+
+ggsave(
+  filename = "path/to/file/filename.png",  #
+  plot = last_plot(),          #
+  scale = 1,                   #
+  width = NA,                  # 
+  height = NA                  #
+)
+```
+This one comes from the ggplot2 package, so make sure you’ve loaded it into your library before attempting to call it. ggsave( ) swaps the order of the arguments, putting the filename and path before the specified plot, otherwise it’s a very similar function to write_csv( ). Type ?ggsave into the R console for more information on arguments used with the ggsave function. 
+
+That covers the ins and outs of the readr package as taught in the R for Data Science book by Hadley Wickham. These basic functions are essential to getting your data science project up and running. For more tips and tricks on properly maintaining a data science project, check out my post [Data Science Project Management](link).
+
+If you found this summary helpful, stay tuned for part three of the R4DS summary series, data wrangling with dplyr. 
+
+Until next time, <br  />
+\- Fisher
+
 
